# Point-Set-Polygonization-CGAL

./: README.md
CmakeMultipleFiles/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  cmake_install.cmake  create_cmake.sh  main.cpp  to_polygon
ch/: CMakeCache.txt  Makefile  cmake_install.cmake  data.in  main.cpp  poly_line_
ch/visualisation/: points
ch_experimental/: CMakeCache.txt  Makefile  cmake_crap.sh  cmake_install.cmake  main.cpp
final/: CMakeCache.txt  CMakeLists.txt  Makefile  call_cmake.sh  cmake_install.cmake  main.cpp  to_polygon
final_no_cmake/: CMakeLists.txt  call_cmake.sh  eval.out  evaluate.cpp  main.cpp  run.sh  to_polygon  vis_app.py
final_no_cmake/data_analysis/: analise_data.ipynb  data.csv  lgs_data.csv  opt_data.csv  opt_run_multiple.py  run_multiple.py
final_no_cmake/includes/cgal_config/: cgal_config.cpp
final_no_cmake/includes/evaluate_helpers/: CMakeLists.txt  Makefile  cmake_install.cmake  evaluate.cpp  evaluate.hpp
final_no_cmake/includes/io_manip/: io_manip.cpp  io_manip.hpp
final_no_cmake/includes/opt_algorithms/: CMakeLists.txt  opt_algorithms.cpp  opt_algorithms.hpp
final_no_cmake/includes/opt_local_search/: CMakeLists.txt  opt_local_search.cpp  opt_local_search.hpp
final_no_cmake/includes/opt_simulated_annealing/: CMakeLists.txt  opt_simulated_annealing.cpp  opt_simulated_annealing.hpp
final_no_cmake/includes/pick/: CMakeLists.txt  pick.cpp
final_no_cmake/includes/poly_from_ch/: CMakeLists.txt  poly_from_ch.cpp  poly_from_ch.hpp
final_no_cmake/includes/poly_incremental/: CMakeLists.txt  poly_incremental.cpp  poly_incremental.hpp
final_no_cmake/includes/poly_line_algorithms/: poly_line_algorithms.cpp  poly_line_algorithms.hpp
final_no_cmake/includes/poly_onion/: CMakeLists.txt  poly_onion.cpp  poly_onion.hpp
final_no_cmake/includes/visibility/: CMakeLists.txt  visibility.cpp  visibility.hpp
final_no_cmake/vis_app_includes/: alg_steps.py  draw.py  draw_alg.py  io_manip.py
incremental/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
(+60 files in other folders)
